RESOLVED FIXED285766
[WASM] Fix Memory Leaks in Wasm::Table for JSWebAssemblyInstance
https://bugs.webkit.org/show_bug.cgi?id=285766
Summary [WASM] Fix Memory Leaks in Wasm::Table for JSWebAssemblyInstance
Yijia Huang
Reported 2025-01-10 12:29:26 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-01-10 12:29:36 PST
Yijia Huang
Comment 2 2025-01-10 12:39:20 PST
EWS
Comment 3 2025-01-10 19:19:30 PST
Committed 288749@main (3e9cca2ed238): <https://commits.webkit.org/288749@main> Reviewed commits have been landed. Closing PR #38863 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.