[WASM] Fix Memory Leaks in Wasm::Table for JSWebAssemblyInstance https://bugs.webkit.org/show_bug.cgi?id=285766 rdar://142702955

Reviewed by Yusuke Suzuki.

JSWebAssemblyInstance::setTable stores a reference to Wasm::Table
in an array of raw Wasm::Table pointers by leaking the references.
Although the array contains raw pointers, these pointers are still
reference-counted. Therefore, JSWebAssemblyInstance should properly
manage their lifecycles by releasing the references when the instance
is about to be destroyed.

* Source/JavaScriptCore/wasm/js/JSWebAssemblyInstance.cpp:
(JSC::JSWebAssemblyInstance::~JSWebAssemblyInstance):

Canonical link: https://commits.webkit.org/288749@main